--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ header {
     padding: 20px;
     font-size: 32px;
     color: rgb(154, 205, 50)
-
 }
 
 
@@ -31,10 +30,12 @@ header {
 
 h1 {
     font: size 40px;
+    text-align: center;
 }
 
 p {
     font-size: 20px;
+    margin-left: 20px;
 }
 
 .categoria-videos {
